--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,8 @@ spring.jpa.hibernate.ddl-auto=update
 ##Naming strategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+
+## file downloading and uploading configs
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.max-file-size=10MB
+#spring.servlet.multipart.max-request-size=15MB
